--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,7 +27,17 @@ h5 {
     background-color: rgba(255, 255, 255, 0.8);
     cursor: pointer;
 }
+#ticket-generation-checkbox{
+    font-size: 25px !important;
+    margin-left:0.2rem;
+    
+}
+.form-check-label{
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 0.5rem;
 
+}
 .btn-primary {
     background-color: var(--primary-color);
     border: none;
